--- a/complete/pom.xml
+++ b/complete/pom.xml
@@ -76,6 +76,21 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+    <groupId>io.prometheus</groupId>
+    <artifactId>simpleclient_spring_boot</artifactId>
+    <version>0.1.0</version>
+</dependency>
+<dependency>
+    <groupId>io.prometheus</groupId>
+    <artifactId>simpleclient_servlet</artifactId>
+    <version>0.1.0</version>
+</dependency>
+<dependency>
+    <groupId>io.prometheus</groupId>
+    <artifactId>simpleclient_hotspot</artifactId>
+    <version>0.1.0</version>
+</dependency>
     </dependencies>
 
 </project>
